knn_2: splits data into test/train and makes predictions

--- a/knn_1.ipynb
+++ b/knn_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "[1300 rows x 5 columns]>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "[7100 rows x 13 columns]>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -7236,7 +7236,7 @@
        "  [3850, 37]]}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7267,25 +7267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "142 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_days = len(statedata['California'])\n",
-    "print(num_days, num_features)"
+    "num_days = len(statedata['California'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -7526,7 +7517,7 @@
        "[6850 rows x 10 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7562,7 +7553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -7668,7 +7659,7 @@
        "[6850 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7680,18 +7671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NearestNeighbors(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "                 metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
-       "                 radius=1.0)"
+       "NearestNeighbors()"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7706,7 +7695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -7714,7 +7703,7 @@
      "output_type": "stream",
      "text": [
       "(array([[  0.        ,  97.33447488, 105.98584811, 106.3578864 ,\n",
-      "        133.31166491]]), array([[6849,  255, 6848, 4602, 5509]]))\n",
+      "        133.31166491]]), array([[6849,  255, 6848, 4602, 5509]], dtype=int64))\n",
       "[3899, 45]\n"
      ]
     }
@@ -7733,23 +7722,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "148"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "labels.iloc[0][1]"
+    "# Prediction:\n",
+    "dynamically build the labels structure and (knndata structure) for the days we want to predict\n",
+    "\n",
+    "Input:\n",
+    "days_to_predict: # days into the future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "days_to_predict = 30"
    ]
   },
   {
@@ -7757,7 +7746,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for day in range(1,days_to_predict+1):\n",
+    "    for state in \n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -7776,7 +7770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
