trying a basic SIR model for all days

--- a/sir-test.ipynb
+++ b/sir-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        " 23.75]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "0.003890449763988141"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "Name: Hospitalization_Rate, dtype: float64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "7050  20094.836316                   NaN  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,44 +514,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([119254.        , 120098.70667161, 120953.41661869, 121818.24544052,\n",
-       "       122693.30346797])"
+       "[119254.0,\n",
+       " 120452.31292788632,\n",
+       " 121664.94457560887,\n",
+       " 122892.06379716449,\n",
+       " 124133.83184371446]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "forparams_ala.iloc[window-1, 3] + (I-forparams_ala.iloc[window-1,6])"
+    "y = [sum(x) for x in zip(I.tolist(), R.tolist())]\n",
+    "y = [sum(x) for x in zip(y, D.tolist())]\n",
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2105.        , 2120.12436373, 2135.43330664, 2150.92910652,\n",
-       "       2166.61394132])"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "D + 60"
+    "D.tolist()"
    ]
   },
   {
